# yenteclient

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
model/: model.json
plans/: 2026-05-29-m1-python-codegen.md  2026-05-29-sdk-and-cli-design.md  2026-05-31-sdk-documentation.md
python/: README.md  mkdocs.yml  pyproject.toml
python/docs/: README.md  cli.md  index.md  tutorial.md
python/docs/api/: async_client.md  client.md  entities.md  exceptions.md  filters.md  index.md  models.md  schemas.md
python/src/yente_client/: __init__.py  _http.py  _translation.py  async_client.py  client.py  exceptions.py  filters.py  models.py
python/src/yente_client/cli/: _deps.py  commands.py  config.py  main.py  output.py
python/src/yente_client/entities/: __init__.py  _base.py  _generated.py
python/src/yente_client/schemas/: __init__.py  _literals.py  _lookup.py  model.json
python/tests/: conftest.py  test_async_client.py  test_base.py  test_cli_commands.py  test_cli_output.py  test_cli_ref.py  test_client.py  test_endpoints_readonly.py  test_exceptions.py  test_filters.py  test_generated.py  test_live.py  test_match.py  test_models.py  test_regen.py  test_schemas.py  test_search.py  test_smoke.py
scripts/: check_changelog.py  regen_model.py
scripts/templates/: python_entities.py.j2  python_entities_init.py.j2  python_literals.py.j2
testdata/: adjacent_full.json  adjacent_property.json  algorithms.json  catalog.json  entity_person.json  entity_with_sanctions.json  match_below_threshold.json  match_high_score.json  match_zero_results.json  search_basic.json  search_no_results.json
